--- a/Traqqer/Details.storyboard
+++ b/Traqqer/Details.storyboard
@@ -7,7 +7,7 @@
         <!--View Controller-->
         <scene sceneID="fX6-d9-XlE">
             <objects>
-                <viewController id="oyd-5o-M0v" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Details" id="oyd-5o-M0v" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="iUE-mA-inM"/>
                         <viewControllerLayoutGuide type="bottom" id="zry-1M-Ws5"/>
