updating table view color for dashboard graph

--- a/Traqqer/DashboardGraphCell.xib
+++ b/Traqqer/DashboardGraphCell.xib
@@ -23,6 +23,7 @@
                         <variation key="default">
                             <mask key="constraints">
                                 <exclude reference="DmE-mD-rrU"/>
+                                <exclude reference="HRN-wd-LJC"/>
                             </mask>
                         </variation>
                     </view>
